--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
@@ -62,17 +68,30 @@
       </aside>
       <header class="header">
         <div class="upper-panel">
-          <div class="left-panel">
+          <div class="left-panel-upper">
             <i class="fa-solid fa-magnifying-glass"></i>
             <input class="search-bar" type="text" placeholder="Search" />
           </div>
-          <div class="right-panel">
+          <div class="right-panel-upper">
             <i class="fa-solid fa-bell"></i>
             <img src="placeholder.jfif" alt="placeholder" />
-            <h1>Jacob</h1>
+            <h2>Jacob</h2>
           </div>
         </div>
-        <div class="lower-panel"></div>
+        <div class="lower-panel">
+          <div class="left-panel-lower">
+            <img src="placeholder.jfif" alt="placeholder" />
+            <div class="text">
+              <p>Hi there!</p>
+              <h1>Jacob (Cob@Null)</h1>
+            </div>
+          </div>
+          <div class="right-panel-lower">
+            <button class="right-panel-btn">New</button>
+            <button class="right-panel-btn">Upload</button>
+            <button class="right-panel-btn">Save</button>
+          </div>
+        </div>
       </header>
       <main class="main"></main>
     </div>
