--- a/index.html
+++ b/index.html
@@ -24,45 +24,46 @@
       <aside class="sidebar">
         <header class="logo-mark">
           <i class="fa-solid fa-draw-polygon"></i>
+          <h1>DashBoard</h1>
         </header>
         <div class="option panel-1">
           <div class="btn home">
-            <i class="fa -solid fa-house"></i>
-            <h1>Home</h1>
+            <i class="fa-solid fa-house"></i>
+            <h3>Home</h3>
           </div>
           <div class="btn Profile">
             <i class="fa-solid fa-user"></i>
-            <h1>Profile</h1>
+            <h3>Profile</h3>
           </div>
           <div class="btn Messages">
             <i class="fa-solid fa-message"></i>
-            <h1>Messages</h1>
+            <h3>Messages</h3>
           </div>
           <div class="btn History">
             <i class="fa-solid fa-clock-rotate-left"></i>
-            <h1>History</h1>
+            <h3>History</h3>
           </div>
           <div class="btn Task">
             <i class="fa-solid fa-list-check"></i>
-            <h1>Task</h1>
+            <h3>Task</h3>
           </div>
           <div class="btn Communities">
             <i class="fa-solid fa-globe"></i>
-            <h1>Communities</h1>
+            <h3>Communities</h3>
           </div>
         </div>
         <div class="option panel-2">
           <div class="btn settings">
             <i class="fa-solid fa-gear"></i>
-            <h1>Settings</h1>
+            <h3>Settings</h3>
           </div>
           <div class="btn support">
             <i class="fa-solid fa-circle-info"></i>
-            <h1>Support</h1>
+            <h3>Support</h3>
           </div>
           <div class="btn privacy">
             <i class="fa-solid fa-shield"></i>
-            <h1>Privacy</h1>
+            <h3>Privacy</h3>
           </div>
         </div>
       </aside>
