Initialized layout for main content

--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
           </div>
         </div>
       </header>
-      <main class="main"></main>
+      <main class="main">
+        <div class="content-card"></div>
+        <div class="announcement"></div>
+        <div class="trending"></div>
+      </main>
     </div>
   </body>
 </html>
