Added card content and announcement panel

--- a/index.html
+++ b/index.html
@@ -95,8 +95,117 @@
         </div>
       </header>
       <main class="main">
-        <div class="content-card"></div>
-        <div class="announcement"></div>
+        <div class="content-card">
+          <h2 class="Projects-heading">Projects</h2>
+          <div class="card top">
+            <div>
+              <h3>test</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+                numquam ad repellat alias aliquam?
+              </p>
+            </div>
+            <div class="card-btn">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-eye"></i>
+              <i class="fa-solid fa-share-nodes"></i>
+            </div>
+          </div>
+          <div class="card top">
+            <div>
+              <h3>test</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+                numquam ad repellat alias aliquam?
+              </p>
+            </div>
+            <div class="card-btn">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-eye"></i>
+              <i class="fa-solid fa-share-nodes"></i>
+            </div>
+          </div>
+          <div class="card top">
+            <div>
+              <h3>test</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+                numquam ad repellat alias aliquam?
+              </p>
+            </div>
+            <div class="card-btn">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-eye"></i>
+              <i class="fa-solid fa-share-nodes"></i>
+            </div>
+          </div>
+          <div class="card">
+            <div>
+              <h3>test</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+                numquam ad repellat alias aliquam?
+              </p>
+            </div>
+            <div class="card-btn">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-eye"></i>
+              <i class="fa-solid fa-share-nodes"></i>
+            </div>
+          </div>
+          <div class="card">
+            <div>
+              <h3>test</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+                numquam ad repellat alias aliquam?
+              </p>
+            </div>
+            <div class="card-btn">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-eye"></i>
+              <i class="fa-solid fa-share-nodes"></i>
+            </div>
+          </div>
+          <div class="card">
+            <div>
+              <h3>test</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+                numquam ad repellat alias aliquam?
+              </p>
+            </div>
+            <div class="card-btn">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-eye"></i>
+              <i class="fa-solid fa-share-nodes"></i>
+            </div>
+          </div>
+        </div>
+        <div class="announcement">
+          <h2 class="announcement-heading">Announcement</h2>
+          <div>
+            <h4>Site Maintenance</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+              numquam ad repellat alias aliquam?
+            </p>
+          </div>
+          <div>
+            <h4>Community share day</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+              numquam ad repellat alias aliquam?
+            </p>
+          </div>
+          <div>
+            <h4>Update Privacy Policy</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+              numquam ad repellat alias aliquam?
+            </p>
+          </div>
+        </div>
         <div class="trending"></div>
       </main>
     </div>
