--- a/index.html
+++ b/index.html
@@ -206,7 +206,30 @@
             </p>
           </div>
         </div>
-        <div class="trending"></div>
+        <div class="trending">
+          <h2>Trending</h2>
+          <div class="trend">
+            <img src="placeholder.jfif" alt="" />
+            <div class="trend-text">
+              <h4>User</h4>
+              <p>Nickname</p>
+            </div>
+          </div>
+          <div class="trend">
+            <img src="placeholder.jfif" alt="" />
+            <div class="trend-text">
+              <h4>User</h4>
+              <p>Nickname</p>
+            </div>
+          </div>
+          <div class="trend">
+            <img src="placeholder.jfif" alt="" />
+            <div class="trend-text">
+              <h4>User</h4>
+              <p>Nickname</p>
+            </div>
+          </div>
+        </div>
       </main>
     </div>
   </body>
